# uarm-suite

./: .gitignore  CLAUDE.md  README.md  arm.py  cli.py  config.py  conftest.py  drawing.py  hardware.py  kinematics.py  mockhw.py  pyproject.toml  server.py
activities/: __init__.py  _draw.py  draw_shapes.py  draw_text.py  tic_tac_toe.py
docs/prompts/: phase10_kickoff.md  phase2_kickoff.md  phase3_kickoff.md  phase4_kickoff.md  phase5_kickoff.md  phase6_kickoff.md  phase7_kickoff.md  phase8_kickoff.md  phase9_kickoff.md  uArm_claude_code_prompt.md
docs/reports/: phase2.md  phase3.md
docs/walkthroughs/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7-hardware.md  phase7.md  phase8-pen-panel.md  phase8.md  phase8b.md  phase8c.md  phase9-hardware-setup.md
static/: app.js  index.html  style.css  viz.js
tests/: test_activities.py  test_arm.py  test_cli.py  test_draw_shapes.py  test_draw_text.py  test_drawing.py  test_feed.py  test_hardware.py  test_kinematics.py  test_mockhw.py  test_phase6.py  test_server.py  test_tic_tac_toe.py
