[project]
name = "uarm-suite"
version = "0.1.0"
description = "Control suite for the first-generation uArm Swift driven via Raspberry Pi + PCA9685."
authors = [{ name = "Mazen Elbawab", email = "mazen.elbawab@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "typer>=0.12",
    "uvicorn[standard]>=0.47.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "kinematics", "hardware", "arm", "cli", "server"]
packages = ["activities"]

[project.scripts]
uarm = "cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
